Changelog for Touchdown
=======================

0.0.20 (unreleased)
-------------------

- Fix cache corruption issue.


0.0.19 (2015-06-15)
-------------------

- Add AWS password policy management. This lets you enforce password complexity
  for your IAM users.

- Add a 'touchdown get-signin-url' command.

- Better 'touchdown dot' output.

- Fix ``Y/n`` confirmation so that ``Y`` really is the default.

- #43 - Fix documentation and validation around Subnet ``cidr_block`` -
  ``192.168.0.1/24`` isn't a valid cidr.

- A resource acquired with ``Foo.get_bar`` will not be considered for deletion
  by ``touchdown destroy``.


0.0.18 (2015-06-11)
-------------------

- Fix a conflict between IAM policies and Resource policies. Resource policies
  are now specified using ``ensure``::

      aws.add_role(
          name="myrole",
          ensure=["never-destroy"],
          assume_role_policy={...},
          policies={
              "mypolicy": {
                  "Statement": [{
                      "Effect": "Allow",
                      "Action": "*",
                      "Resource": "*",
                  }],
              },
          },
      )

- Fix a conflict between ``Plan.validate`` and ``Rollback.validate`` which
  caused a regression in the ``rollback`` command.


0.0.17 (2015-06-10)
-------------------

- Fix an edge case where using mfa, cross account roles and image_copy.


0.0.16 (2015-06-10)
-------------------

- Can now do use MFA and cross-account roles to do deployments in other
  accounts. If you set up your Touchdownfile with::

      aws = workspace.add_aws(
          access_key_id="...",
          secret_access_key="...",
          mfa_serial="...",
      )

  Then touchdown will prompt you for an MFA code before starting the
  deployment. Under the hood this uses the ``GetSessionToken`` API to
  generate temporary AWS credentials. A bit like sudo, these are cached
  so each action doesn't require a new MFA token.
