@@ -6,6 +6,10 @@ Changelog for Touchdown
 
 - Fix cache corruption issue.
 
+- Workaround some potential eventual consitency issues with RouteTable and
+  NetworkACL. Observed behaviour is that after creating them they arent visible
+  to the describe API. Then they are. Then they arent. Then they are.
+
 
 0.0.19 (2015-06-15)
 -------------------
